--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@
     --button-color: #3882F6;
     --information-header-text: 36px #1F2937;
     --quote-section-background: #E5E7EB;
-    --quote-text: 36px light italic #1f2937;
+    --quote-text: 36px;
+    --quote-text-color: #1f2937;
 }
 
 * {
@@ -18,6 +19,7 @@
     padding: 0;
     font-family: "Roboto", sans-serif;
     align-items: center;
+   /* transition: all 0.3s ease 0s; */
 }
 
 
@@ -36,6 +38,7 @@ header {
 .navLinks {
     list-style-type: none;
     text-decoration: none;
+    font-size: 18px;
 }
 
 .navLinks li {
@@ -44,17 +47,19 @@ header {
 }
 
 .navLinks li a {
-    transition: all 0.3s ease 0s;
+    text-decoration: none;
+    color: inherit;
 }
 
 .navLinks li a:hover {
-    opacity: 3%;
+    transform: scale(1,1);
 }
 
 .headerLogoText{
     font: var(--header-logo-text);
     color: var(--header-logo-color);
     cursor: pointer;
+    font-size: 24px;
 
 }
 
@@ -69,21 +74,23 @@ header {
 .heroContainer {
     background-color: var(--dark-background-color);
     display: flex;
-    padding: 20px;
+    padding: 10vw;
     color: var(--hero-text-color);
 }
 
-.hero {
+.hero .heroImageContainer {
     max-width: 50%;
 }
 
-.hero h1 {
-    font-size: 2.5em;
+h1.heroText  {
+    font-size: 48px;
+    width: 50vw;
     margin: 0 0 10px;
 }
 
-.hero p {
-    font-size: 1.2em;
+p.heroTextSmall  {
+    font-size: 18px;
+    width: 50vw;
     margin: 0 0 20px;
 }
 
@@ -98,6 +105,68 @@ header {
 }
 
 img {
-    max-width: 50%;
+    max-width: 45%;
     height: auto;
 }
+/*Random information section styling*/
+
+.information {
+    align-items: center;
+    margin: 5rem;
+    padding: 20px;
+}
+
+h1.informationHeader {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 1.5rem;
+    padding: 1.5rem;
+}
+
+div.informationContainer{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+div.informationText {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+div.imageBorder{
+    border: solid 2px #3882F6;
+    min-width: 100px;
+    min-height: 100px;
+    border-radius: 10px;
+}
+
+/* quote decoration and styling */
+
+.quoteContainer {
+    display: flex;
+    flex-direction: column;
+    padding: 10vw;
+    background-color: var(--quote-section-background);
+}
+
+blockquote {
+    display: flex;
+    align-items: center;
+    margin: 5vw;
+  }
+  
+  blockquote p.quoteText {
+    padding: 15px;
+    border-radius: 5px;
+    font-size: 36px;
+    font-style: italic;
+    color: var(--quote-text-color);
+    font-weight: 200;
+  }
+
+  .quoteAuthor {
+    display: flex;
+    margin-inline-start: auto;
+  }
